[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Darwin Morris"]
description = "A key-value store"

[dependencies]
clap = "4.2.0"
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3"
walkdir = "2"